# fabio_msgs

./: CMakeLists.txt  LICENSE  README.md
action/: ChargeRobot.action  CheckHumanExists.action  FakeNav.action  FakeSay.action  GiveVoucher.action  PoseStamped.action  PromoteProduct.action  ROSPlan.action  Respond.action  TerminateInteractionByUser.action  UndockRobot.action  dialogue.action
fabio_msgs/: CMakeLists.txt  package.xml
fabio_msgs/action/: GoalServer.action  String.action  Test.action
fabio_msgs/srv/: Translate.srv  UpdateKnowledgeBase.srv
msg/: ActionResult.msg  DialogueMetaEvent.msg  PNPExecutionRule.msg  PNPExecutionRuleArray.msg
pepper_actions/: CMakeLists.txt  package.xml
pepper_actions/action/: ChargeRobotAS.action  CheckPersonExistsAS.action  EngagePersonAS.action  MoveBaseToWaypointAS.action  PromoteProductAS.action  RespondToPersonAS.action  TrackPersonAS.action
pepper_actions_pnp/: CMakeLists.txt  LICENSE  package.xml
pepper_actions_pnp/action/: CheckPersonExists.action  DescribeRoute.action  MoveBaseToDistance.action  RespondToPerson.action  TalkToPerson.action  UndockRobot.action
planning_ws/src/guiding_as/: CMakeLists.txt  package.xml
planning_ws/src/guiding_as/action/: task.action
planning_ws/src/mummer_asr/end_of_speech/: CMakeLists.txt  package.xml
planning_ws/src/mummer_asr/mummer_asr/: CMakeLists.txt  package.xml
planning_ws/src/pnp_servers/pepper_check_human_exists/: CMakeLists.txt  package.xml
planning_ws/src/pnp_servers/pepper_engage_human/: CMakeLists.txt  package.xml
planning_ws/src/pnp_servers/pepper_engage_human/action/: EngageHuman.action  FindInteractant.action
planning_ws/src/pnp_servers/pepper_goal_server/: CMakeLists.txt  package.xml
planning_ws/src/pnp_servers/pepper_goal_server/action/: RouteDescriptionGoalServer.action
planning_ws/src/pnp_servers/pepper_move_base/: CMakeLists.txt  package.xml
planning_ws/src/pnp_servers/pepper_route_description/: CMakeLists.txt  package.xml
planning_ws/src/pnp_servers/pepper_speak/: CMakeLists.txt  package.xml
planning_ws/src/ros_plan/rosplan_dispatch_msgs/: CMakeLists.txt  package.xml
planning_ws/src/ros_plan/rosplan_knowledge_msgs/: CMakeLists.txt  package.xml
planning_ws/src/rp_pnp_bridge/pnp_plugin_servers/: CMakeLists.txt  package.xml
planning_ws/src/rp_pnp_bridge/rosplan_pnp_bridge/: CMakeLists.txt  package.xml
planning_ws/src/wp4_dialogue/chatbot_interface/: CMakeLists.txt  package.xml
planning_ws/src/wp4_dialogue/dialogue_arbiter/: CMakeLists.txt  package.xml
planning_ws/src/wp4_dialogue/dialogue_task_actions/: CMakeLists.txt  package.xml
planning_ws/src/wp4_dialogue/dialogue_translator/: CMakeLists.txt  package.xml
planning_ws/src/wp4_dialogue/mummer_dialogue/: CMakeLists.txt  package.xml
pnp_msgs/: CMakeLists.txt  package.xml
pnp_msgs/action/: GoHome.action  Speak.action
pnpgen_ros/: CMakeLists.txt
pnpgen_ros/msg/: PNPActionArray.msg
rosplan_knowledge_msgs/: CMakeLists.txt  package.xml
srv/: ChatbotInterface.srv  PNPGeneratePlan.srv
ssp_ws/src/ssp_fusion/ssp_fusion_msgs/: CMakeLists.txt  package.xml
ssp_ws/src/ssp_synthesis/pepper_actions/: CMakeLists.txt  package.xml
ssp_ws/src/ssp_synthesis/pepper_actions_pnp/: CMakeLists.txt  package.xml
(+35 files in other folders)
