<?xml version="1.0"?>
<!-- Copyright (c) 2017 University of Glasgow, <http://www.gla.ac.uk/>

     Author: Bart Craenen <Bart.Craenen@glasgow.ac.uk>

     This code is released to and for the partners of the MuMMER project
     (MultiModal Mall Entertainment Robot, Grant Agreement Number 688147)
     under the clauses of the MuMMER consortium agreement (Based on DESCA
     Horizon 2020 Template CA version 1.1)                                -->
<package>
	<name>pepper_actions</name>
	<version>1.0.0</version>
	<description>The pepper_actions package</description>
	<maintainer email="Bart.Craenen@glasgow.ac.uk">Bart Craenen</maintainer>
	<license>MIT</license>
	<url type="repository">http://protolab.aldebaran.com:9000/bcraenen/ssp_synthesis</url>
	<author email="Bart.Craenen@glasgow.ac.uk">Bart Craenen</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>ssp_synthesis_msgs</build_depend>

	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>ssp_synthesis_msgs</run_depend>
</package>
